--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,5 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
+
+    <div class="row card-panel grey lighten-5">
+        <form action="{{ url_for('search') }}" method="POST" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix light-green-text text-darken-2"></i>
+                    <input type="text" name="query" minlength="1" id="query" class="validate" required>
+                    <label for="query">Search...</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('get_reviews') }}" class="red darken-1 btn text-shadow">Reset</a>
+                    <button class="light-green darken-1 btn text-shadow">
+                        Search<i class="fas fa-search left"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
     <div class="row">
         {% for review in reviews %}
                 <div class="col s12 m6 l4 xl3">
