--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
          {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
-                    <div class="row flashes">
+                    <div class="row flashes s12">
                         <h4 class="light-green lighten-4 center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
