--- a/templates/register.html
+++ b/templates/register.html
@@ -10,8 +10,8 @@
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix light-green-text text-darken-2"></i>
-						<input id="username" name="username" type="text" class="validate"
-                            pattern="^[a-zA-Z0-9]{3,15}$" required>
+						<input id="username" name="username" minlength="2" maxlength="25"
+                            type="text" class="validate" pattern="^[a-zA-Z0-9]{3,25}$" required>
 						<label for="username">Username</label>
 					</div>
                 </div>
@@ -20,7 +20,7 @@
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
                         <input id="password" name="password" type="password" class="validate"
-                            pattern="^[a-zA-Z0-9]{3,15}$" minlength="3" maxlength="15" required>
+                            pattern="^[a-zA-Z0-9]{3,30}$" minlength="3" maxlength="30" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
                         <input id="confirm_password" name="confirm_password" type="password" class="validate" 
-                            pattern="^[a-zA-Z0-9]{3,15}$" minlength="3" maxlength="15"required>
+                            pattern="^[a-zA-Z0-9]{3,30}$" minlength="3" maxlength="30"required>
                         <label for="confirm_password">Confirm Password</label>
                     </div>
                 </div>
