--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,11 +33,8 @@
 }
 
 .material-tooltip {
-    font-size: x-large;
-    font-weight: 500;
-    background-color: rgba(255,255,255,0.8);
-    color: black;
-    position: absolute;
+    font-size: large;
+    max-width: 550px;
 }
 
 /*---------------------------------------------------------- Book Icon */
@@ -66,20 +63,32 @@
     text-overflow: ellipsis;
 }
 
+.card h5 {
+    padding-bottom: 5px;
+}
+
+/*---------------------------------------------------------- custom spacing div */
 .spacing {
     height: 5px;
 }
 
+/*---------------------------------------------------------- button positioning */
 #fix-btn-location {
     position: absolute;
     bottom: 15px;
     left: 24px;
 }
 
+/*---------------------------------------------------------- delete modal */
 .modal {
     padding-bottom: 24px;
 }
 
-.card h5 {
-    padding-bottom: 5px;
+/*---------------------------------------------------------- search bar */
+.search-bar {
+    padding: 0;
+}
+
+.valign-wrapper {
+    flex-wrap: wrap;
 }
