--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel search-bar grey lighten-5">
         <form action="{{ url_for('search') }}" method="POST" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12 m8">
