--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -4,14 +4,14 @@
 <h3 class="center-align">Change Password</h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('signup') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('change_password') }}">
             <div class="card-panel">
                 <!-- Old Password -->
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
                         <input id="old_password" name="old_password" type="password" class="validate"
-                            pattern="^[a-zA-Z0-9]{3,15}$" minlength="3" maxlength="15" required>
+                            minlength="3" maxlength="30" required>
                         <label for="old_password">Old Password</label>
                     </div>
                 </div>
@@ -19,9 +19,9 @@
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
-                        <input id="new_password" name="password" type="password" class="validate"
-                            pattern="^[a-zA-Z0-9]{3,15}$" minlength="3" maxlength="15" required>
-                        <label for="new_password">New Password</label>
+                        <input id="password" name="password" type="password" class="validate"
+                            minlength="3" maxlength="30" required>
+                        <label for="password">New Password</label>
                     </div>
                 </div>
                 <!-- Confirm Password -->
@@ -29,7 +29,7 @@
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
                         <input id="confirm_password" name="confirm_password" type="password" class="validate" 
-                            pattern="^[a-zA-Z0-9]{3,15}$" minlength="3" maxlength="15"required>
+                            minlength="3" maxlength="30"required>
                         <label for="confirm_password">Confirm Password</label>
                     </div>
                 </div>
