--- a/templates/register.html
+++ b/templates/register.html
@@ -20,7 +20,7 @@
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
                         <input id="password" name="password" type="password" class="validate"
-                            pattern="^[a-zA-Z0-9]{3,30}$" minlength="3" maxlength="30" required>
+                            minlength="3" maxlength="30" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
                         <input id="confirm_password" name="confirm_password" type="password" class="validate" 
-                            pattern="^[a-zA-Z0-9]{3,30}$" minlength="3" maxlength="30"required>
+                            minlength="3" maxlength="30"required>
                         <label for="confirm_password">Confirm Password</label>
                     </div>
                 </div>
