--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
     </header>
 
     <section>
-        <h2></h2>
+        <div class="spacing"></div>
         <!-- flash messages -->
          {% with messages = get_flashed_messages() %}
             {% if messages %}
