--- a/templates/base.html
+++ b/templates/base.html
@@ -48,8 +48,7 @@
         </ul>
     </header>
 
-    <section>
-        <div class="spacing"></div>
+    <div>
         <!-- flash messages -->
          {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -60,7 +59,7 @@
                 {% endfor %}
             {% endif %}
          {% endwith %}
-    </section>
+    </div>
 
     <main class="container">
         {% block content %}
