--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@
                 <div class="col s12 m6 xl4">
                     <div class="card card-height">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="{{ review.cover_art }}">
+                            <img class="activator" src="{{ review.cover_art }}" alt="book cover artwork for the book {{ review.title }}">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">
@@ -35,7 +35,7 @@
                             <p class="truncate"><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
                             {% if review.affiliate_link %}
                             <div class="spacing"></div>
-                            <a href="{{ review.affiliate_link }}" target="_blank" class="fix-btn-location uppercase btn light-green darken-2">Buy Now!</a>
+                            <a href="{{ review.affiliate_link }}" target="_blank" class="fix-btn-location uppercase btn light-green darken-2 text-shadow">Buy Now!</a>
                             {% endif %}
                         </div>
                         <div class="card-reveal">
@@ -43,7 +43,7 @@
                             <p><strong>Summary:</strong> {{ review.summary }}</p>
                             {% if review.affiliate_link %}
                                 <div class="spacing"></div>
-                                <a href="{{ review.affiliate_link }}" target="_blank" class="fix-btn-location uppercase btn light-green darken-2">Buy Now!</a>
+                                <a href="{{ review.affiliate_link }}" target="_blank" class="fix-btn-location uppercase btn light-green darken-2 text-shadow">Buy Now!</a>
                             {% endif %}
                             {% if session["user"] == review.user_created or session["user"] == "admin" %}
                             <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn left light-green darken-1"><i
